--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,24 @@
 group 'test'
 version '1.0-SNAPSHOT'
-
+apply plugin: 'idea'
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile 'junit:junit:4.12'
+}
+
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
+idea.project.vcs = "Git"
+
+defaultTasks 'clean', 'build'
+
+task wrapper(type: Wrapper) {
+    gradleVersion = "2.14"
 }
