--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,5 @@
-group 'test'
-version '1.0-SNAPSHOT'
 apply plugin: 'idea'
 apply plugin: 'java'
-
-sourceCompatibility = 1.8
 
 repositories {
     jcenter()
@@ -11,8 +7,8 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.12'
+    compile 'com.alibaba:fastjson:1.2.13'
 }
-
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
 idea.project.vcs = "Git"
